tests/ui/typeck/issue-90027-async-fn-return-suggestion.stderr
error[E0308]: mismatched types
  --> $DIR/issue-90027-async-fn-return-suggestion.rs:4:5
   |
LL | async fn hello() {
   |                  - help: try adding a return type: `-> i32`
LL |     0
   |     ^ expected `()`, found integer

error[E0308]: mismatched types
  --> $DIR/issue-90027-async-fn-return-suggestion.rs:9:5
   |
LL | async fn world() -> () {
   |                     -- expected `()` because of return type
LL |     0
   |     ^ expected `()`, found integer

error[E0308]: mismatched types
  --> $DIR/issue-90027-async-fn-return-suggestion.rs:14:5
   |
LL |     hello()
   |     ^^^^^^^ expected `()`, found opaque type
   |
   = note: expected unit type `()`
            found opaque type `impl Future<Output = ()>`
help: consider `await`ing on the `Future`
   |
LL |     hello().await
   |            ++++++
help: consider using a semicolon here
   |
LL |     hello();
   |            +

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
